--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # --------------------------------------------------------------------------------------------------------------------------------------------------------------
 # DATA SOURCE PROPERTIES
 # --------------------------------------------------------------------------------------------------------------------------------------------------------------
-
+server.compression.enabled=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #---- DEV SERVER - LOCAL HOSTz
@@ -9,4 +9,22 @@ spring.datasource.url=jdbc:mysql://localhost:3306/shopping_cart_db?autoReconnect
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+
 server.port = 8081
+
+
+## Hibernate Logging
+logging.level.org.hibernate.SQL= DEBUG
+
+# Initialize the datasource with available DDL and DML scripts
+spring.datasource.initialization-mode=always
+
+## Jackson Properties
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
+spring.jackson.time-zone= UTC
+
+## App Properties
+app.jwtSecret= JWTSuperSecretKey
+app.jwtExpirationInMs = 604800000
