--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,14 @@ server.compression.enabled=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #---- DEV SERVER - LOCAL HOSTz
-spring.datasource.url=jdbc:mysql://localhost:3306/fashion_db?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&createDatabaseIfNotExist=true&useFastDateParsing=false
+spring.datasource.url=jdbc:mysql://localhost:3306/fashion_db_2?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&createDatabaseIfNotExist=true&useFastDateParsing=false
 spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 
-server.port = 8081
+server.port = 8080
 
 
 ## Hibernate Logging
