Save images and Add/Update items

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,12 @@ spring.jackson.time-zone= UTC
 ## App Properties
 app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
+
+fashion.upload.dir =/opt/tomcat/webapps
+fashion.download.dir =https://localhost:8080
+
+fashion.file.upload.dir=${fashion.upload.dir}/resources
+fashion.file.download.dir=${tags.download.dir}/resources
+
+fashion.image.event.icon.upload.dir=${fashion.file.upload.dir}/images/icon/
+fashion.image.event.icon.download.dir=${fashion.file.download.dir}/images/icon/
