User Validation and Create Order

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
 
 fashion.upload.dir =/opt/tomcat/webapps
-fashion.download.dir =https://localhost:8080
+fashion.download.dir =/opt/tomcat/webapps
 
 fashion.file.upload.dir=${fashion.upload.dir}/resources
 fashion.file.download.dir=${tags.download.dir}/resources
